--- a/sass/partials/_responsive-spacing.scss
+++ b/sass/partials/_responsive-spacing.scss
@@ -26,6 +26,9 @@
   }
 }
 @include m.device-425px {
+  .res-pt-120 {
+    padding-top: 120px;
+  }
   .res-py-120 {
     padding: 120px 0;
   }
@@ -56,6 +59,9 @@
     .res-pb-40 {
       padding-bottom: 40px;
     }
+  }
+  .res-pb-120 {
+    padding-bottom: 120px;
   }
   .res-pb-50 {
     padding-bottom: 50px;
